Challenge-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prservice-service
spec:
  selector:
    app: prapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
