Challenge-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pr
spec:
  rules:
  - host: "prlist.sampleapp.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prservice-service
            port:
              number: 80
